--- a/style.css
+++ b/style.css
@@ -26,8 +26,9 @@ body {
   }
   
   .time-block{
-    text-align: center;
-    border-radius: 15px;
+    text-align: right;
+    font-weight: 1000;
+    border-radius: 2px;
   }
   
   .row {
@@ -66,7 +67,7 @@ body {
   }
   
   .saveBtn i:hover {
-    font-size: 20px;
+    font-size: 40px;
     transition: all .3s ease-in-out;
   }
   
